# omninance

./: .env-example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  app.py  docker-compose.yml  main.py  ofelia.ini  omninance.db  pyproject.toml  start.bat
database/: omninance.db
nginx/: default.conf  nginx.conf
omninance-backend/: Dockerfile  pyproject.toml
omninance-backend/src/: app.py  db.py  db_sync.py  scheduler.py  test.py
omninance-backend/src/models/: Holder.py  StockList.py  db.py
omninance-backend/src/modules/: strategy.py
omninance-backend/src/routes/: data_explorer.py  holder.py  signals.py  stock_list.py  strategy.py
omninance-backend/src/service/: chip_tracker.py  holder_data.py  stock_data.py  stock_list.py  trader.py
omninance-chip-tracker/: Dockerfile  pyproject.toml  start.bat
omninance-chip-tracker/data/: setting.json
omninance-chip-tracker/data/matrix/: atr_matrix.parquet  chip_matrix.parquet  price_matrix.parquet  volume_matrix.parquet
omninance-chip-tracker/data/raw/holders/one_day/: 03_27_26.parquet  04_02_26.parquet
omninance-chip-tracker/docs/: init.md
omninance-chip-tracker/scripts/: migrate_csv_to_mongo.py
omninance-chip-tracker/src/: CONST.py  app.py  main.py  pipeline.py  util.py
omninance-chip-tracker/src/models/: Ticker.py  db.py
omninance-chip-tracker/src/routes/: backtest.py  signals.py
omninance-chip-tracker/src/service/: holder_data.py  matrix_builder.py  signal_generator.py  stock_data.py  strategy_reader.py
omninance-dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
omninance-dashboard/src/: App.tsx
omninance-dashboard/src/hooks/: useTraderData.ts
omninance-dashboard/src/pages/: Account.tsx  Dashboard.tsx  Data.tsx  Strategy.tsx
omninance-dashboard/src/services/: traderApi.ts
omnindicator/: Dockerfile  pyproject.toml
omnindicator/src/: CONST.py  stock_data.py
omnindicator/src/backtest/: backtester.py
omnindicator/src/indicators/: bias_indicator.py  business_cycle_indicator.py  kd_indicator.py  large_holder_indicator.py  macd_indicator.py  (+3 more)
omnitrader/: Dockerfile  pyproject.toml
omnitrader/docs/: config.simulation.ini  config_only_accounts.ini
omnitrader/src/: app.py  sdk_client.py  util.py
omnitrader/src/routes/: account.py  market.py  orders.py  price_history.py  signals.py
src/: app.py  db.py  stock_data.py  util.py
src/backtest/: backtester.py
src/indicators/: __init__.py  base_indicator.py  bb_indicator.py  bias_indicator.py  business_cycle_indicator.py  indicator_script.py  large_holder_indicator.py  macd_indicator.py  rsi_indicator.py  volume_indicator.py
src/ui/: __init__.py  gauge_chart.py  render_indicator.py
(+9 files in other folders)
