[project]
name = "omninance"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "plotly>=6.5.2",
    "streamlit>=1.53.1",
    "streamlit-echarts>=0.4.0",
    "yfinance>=1.1.0",
    "streamlit-sortables==0.3.1",
    "lxml==6.0.2"
]
