[project]
name = "omninance-backend"
version = "0.1.0"
description = "Strategy orchestration service — reads signals, calls omnitrader, persists results"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pandas>=2.3.3",
    "pyarrow>=16.0.0",
]
