[project]
name = "omninance-backend"
version = "0.1.0"
description = "Strategy orchestration service — manages strategies, calls chip-tracker for signals, executes via omnitrader"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.19",
    "sqlalchemy[asyncio]>=2.0.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0,<4.0",
    "pandas>=2.3.3",
    "tzdata>=2024.1",
]
