[project]
name = "omninance-chip-tracker"
version = "0.1.0"
description = "Taiwan Stock Exchange chip tracker and backtester"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=1.1.0",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "numpy>=1.24",
    "requests>=2.28",
    "vectorbt>=0.26",
    "pyarrow>=12.0",
    "lxml>=5.0.0",
    "beautifulsoup4>=4.14.3",
]
