[project]
name = "omnitrader"
version = "0.1.0"
description = "E.SUN brokerage trading service — executes signals from omninance-chip-tracker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "keyring>=25.0.0",
    "keyrings.cryptfile>=1.3.9",
]
